// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Certificação — regressão industrial (snapshots) > furação europeia na frente overlay — snapshot offsets 1`] = `
[
  {
    "face": "B",
    "x": 37,
    "y": 553,
  },
  {
    "face": "B",
    "x": 511,
    "y": 553,
  },
]
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=1 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 521,
  "bodyHeight": 710,
  "bodyWidth": 548,
  "height": 710,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 550,
  "posX": 0,
  "posY": 5,
  "posZ": 270.5,
  "pullDistanceMm": 521,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 521,
  "bodyHeight": 353,
  "bodyWidth": 548,
  "height": 353,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 550,
  "posX": 0,
  "posY": -173.5,
  "posZ": 270.5,
  "pullDistanceMm": 521,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 521,
  "bodyHeight": 353,
  "bodyWidth": 548,
  "height": 353,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 550,
  "posX": 0,
  "posY": 183.5,
  "posZ": 270.5,
  "pullDistanceMm": 521,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 521,
  "bodyHeight": 234,
  "bodyWidth": 548,
  "height": 234,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 550,
  "posX": 0,
  "posY": -233,
  "posZ": 270.5,
  "pullDistanceMm": 521,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 521,
  "bodyHeight": 234,
  "bodyWidth": 548,
  "height": 234,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 550,
  "posX": 0,
  "posY": 5,
  "posZ": 270.5,
  "pullDistanceMm": 521,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 521,
  "bodyHeight": 234,
  "bodyWidth": 548,
  "height": 234,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 550,
  "posX": 0,
  "posY": 243,
  "posZ": 270.5,
  "pullDistanceMm": 521,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 521,
  "bodyHeight": 174.5,
  "bodyWidth": 548,
  "height": 174.5,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 550,
  "posX": 0,
  "posY": -262.75,
  "posZ": 270.5,
  "pullDistanceMm": 521,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 521,
  "bodyHeight": 174.5,
  "bodyWidth": 548,
  "height": 174.5,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 550,
  "posX": 0,
  "posY": -84.25,
  "posZ": 270.5,
  "pullDistanceMm": 521,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 521,
  "bodyHeight": 174.5,
  "bodyWidth": 548,
  "height": 174.5,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 550,
  "posX": 0,
  "posY": 94.25,
  "posZ": 270.5,
  "pullDistanceMm": 521,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 4`] = `
{
  "bodyDepth": 521,
  "bodyHeight": 174.5,
  "bodyWidth": 548,
  "height": 174.5,
  "index": 3,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 550,
  "posX": 0,
  "posY": 272.75,
  "posZ": 270.5,
  "pullDistanceMm": 521,
  "slideType": "Genérica",
  "softClose": true,
  "width": 598,
}
`;
